--- a/3 chấm wtf.html
+++ b/3 chấm wtf.html
@@ -59,6 +59,56 @@
       <footer class="small"></footer>
     </div>
   </div>
+  <script>// 🎬 Xử lý nút "Chuyển trang"
+document.getElementById('copyBtn').addEventListener('click', function () {
+  // Tạo khung hiển thị video
+  const videoContainer = document.createElement('div');
+  videoContainer.style.cssText = `
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+  `;
+
+  // ✨ Bạn có thể đổi link video ở đây:
+  const videoUrl = './màu [CAC18EF].mp4'; // ví dụ demo
+
+  // Tạo thẻ video
+  const videoEl = document.createElement('video');
+  videoEl.src = videoUrl;
+  videoEl.controls = true;
+  videoEl.autoplay = true;
+  videoEl.loop = false ;
+  videoEl.style.cssText = `
+    width: 80%;
+    max-width: 720px;
+    border-radius: 20px;
+    box-shadow: 0 0 25px rgba(255,255,255,0.5);
+  `;
+
+  // Nút đóng video
+  const closeBtn = document.createElement('button');
+  closeBtn.textContent = '✖';
+  closeBtn.style.cssText = `
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 28px;
+    color: white;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+  `;
+  closeBtn.onclick = () => videoContainer.remove();
+
+  videoContainer.appendChild(videoEl);
+  videoContainer.appendChild(closeBtn);
+  document.body.appendChild(videoContainer);
+});
+</script>
    <script>
     // Hiệu ứng gõ chữ từng ký tự
     function typeText(element, text, speed = 80, callback) {
